# volcaniarm_ws

./: .gitignore  .gitmodules  README.md  third_party.repos
src/onnxruntime_vendor/: CMakeLists.txt  package.xml
src/onnxruntime_vendor/cmake/: onnxruntime_vendor-extras.cmake
src/volcaniarm_bringup/: CMakeLists.txt  package.xml
src/volcaniarm_bringup/launch/: calibration_bringup.launch.py  real_bringup.launch.py  sim_bringup.launch.py  sim_calibration_bringup.launch.py
src/volcaniarm_calibration/: CMakeLists.txt  README.md  package.xml  plugin.xml
src/volcaniarm_calibration/config/: accuracy_test_params.yaml  apriltag_params.yaml  aruco_params.yaml  calibration_params.yaml  calibration_poses.yaml  realsense_params.yaml
src/volcaniarm_calibration/data/: .gitignore
src/volcaniarm_calibration/launch/: accuracy_test.launch.py  apriltag_realsense.launch.py  apriltag_test.launch.py  calibration.launch.py  camera_locator.launch.py  dashboard.launch.py  handeye_server_only.launch.py  sim_accuracy_test.launch.py
src/volcaniarm_calibration/notebooks/: repeatability.ipynb  static_accuracy.ipynb  workspace_coverage.ipynb
src/volcaniarm_calibration/resource/: calibration_dashboard.rviz
src/volcaniarm_calibration/rviz/: calibration_dashboard.rviz
src/volcaniarm_calibration/scripts/: README.md  generate_apriltag_model.py
src/volcaniarm_calibration/src/: accuracy_test  aruco_tf_publisher  camera_locator  export_calibration
src/volcaniarm_calibration/volcaniarm_calibration/: accuracy_test_node.py  aruco_tf_publisher.py  camera_locator_node.py  export_calibration.py
src/volcaniarm_calibration/volcaniarm_calibration/analysis/: __init__.py  loader.py  metrics.py
src/volcaniarm_calibration/volcaniarm_calibration/rqt/: calibration_dashboard_plugin.py  calibration_dashboard_widget.py  preview_publisher.py
src/volcaniarm_calibration/volcaniarm_calibration/runner/: __init__.py  calibration_runner.py  camera_calibration.py  data_writer.py  ee_sweep_calibration.py  hand_eye_calibration.py
src/volcaniarm_calibration/volcaniarm_calibration/runner/tests/: __init__.py  base.py  repeatability.py  static_accuracy.py  workspace_coverage.py
src/volcaniarm_controller/: CMakeLists.txt  closed_loop_trajectory_controller.xml  package.xml  rl_vision_policy_controller.xml
src/volcaniarm_controller/config/: joy_teleop.yaml  volcaniarm_controllers.yaml  volcaniarm_rl_controller.yaml  volcaniarm_rl_vision_controller.yaml
src/volcaniarm_controller/include/volcaniarm_controller/: closed_loop_trajectory_controller.hpp  rl_policy_controller.hpp
src/volcaniarm_controller/launch/: controller.launch.py  joystick_teleop.launch.py  rl_controller.launch.py  rl_vision_controller.launch.py
src/volcaniarm_controller/src/: closed_loop_trajectory_controller.cpp  rl_policy_controller.cpp  rl_vision_policy_controller.cpp  volcaniarm_end_effector_marker.py
src/volcaniarm_controller/volcaniarm_controller/: joystick_teleop_node.py  set_initial_position.py  volcaniarm_end_effector_marker.py
src/volcaniarm_controllers/: CMakeLists.txt  README.md  package.xml  passive_broadcaster.xml  rl_policy_controller.xml
src/volcaniarm_controllers/config/: joy_teleop_bt.yaml  joy_teleop_usb.yaml  volcaniarm_controllers.yaml  volcaniarm_rl_controller.yaml  volcaniarm_rl_vision_controller.yaml
src/volcaniarm_controllers/include/volcaniarm_controllers/: passive_broadcaster.hpp  rl_vision_policy_controller.hpp
src/volcaniarm_controllers/launch/: controller.launch.py  joystick_teleop.launch.py  lerobot_joy.launch.py
src/volcaniarm_controllers/models/: .gitignore  README.md
src/volcaniarm_controllers/src/: passive_broadcaster.cpp  rl_policy_controller.cpp  rl_vision_policy_controller.cpp
src/volcaniarm_controllers/volcaniarm_controllers/: joystick_teleop_node.py
src/volcaniarm_hardware/: CMakeLists.txt  package.xml  volcaniarm_hardware_interface.xml
src/volcaniarm_hardware/include/volcaniarm_hardware/: volcaniarm_hardware.hpp
src/volcaniarm_hardware/src/: volcaniarm_hardware.cpp
src/volcaniarm_hardware/udev/: 99-volcaniarm-esp32.rules  install.sh
src/volcaniarm_ik_plugin/: CMakeLists.txt  package.xml  volcaniarm_ik_plugin_description.xml
src/volcaniarm_ik_plugin/include/volcaniarm_ik_plugin/: volcaniarm_ik_plugin.hpp
src/volcaniarm_ik_plugin/src/: volcaniarm_ik_plugin.cpp
src/volcaniarm_kinematics/: CMakeLists.txt  package.xml
src/volcaniarm_kinematics/include/volcaniarm_kinematics/: five_bar.hpp  params.hpp
src/volcaniarm_kinematics/src/: five_bar.cpp  python_bindings.cpp
src/volcaniarm_kinematics/test/: test_five_bar.cpp  test_pinocchio_oracle.cpp
src/volcaniarm_motion/: CMakeLists.txt  package.xml
src/volcaniarm_motion/config/: motion_params.yaml
src/volcaniarm_motion/launch/: motion.launch.py
src/volcaniarm_motion/test/: test_fk_vs_urdf.py  test_kinematics_math.py
src/volcaniarm_motion/volcaniarm_motion/: volcaniarm_inverse_kinematics.py  volcaniarm_kinematics.py  volcaniarm_motion_planing.py  volcaniarm_motion_planning.py
src/volcaniarm_moveit_config/: CMakeLists.txt  package.xml
src/volcaniarm_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml
src/volcaniarm_moveit_config/include/volcaniarm_ik_plugin/: volcaniarm_ik_plugin.hpp
src/volcaniarm_moveit_config/launch/: move_group.launch.py  moveit_rviz.launch.py
src/volcaniarm_moveit_config/scripts/: joint_state_transformer
src/volcaniarm_moveit_config/src/: volcaniarm_ik_plugin.cpp
src/volcaniarm_moveit_config/srdf/: volcaniarm.srdf.xacro
src/volcaniarm_moveit_config/volcaniarm_moveit_config/: joint_state_transformer.py
src/volcaniarm_weed_detector/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/volcaniarm_weed_detector/config/: weed_targeting_params.yaml
src/volcaniarm_weed_detector/launch/: weed_targeting.launch.py
src/volcaniarm_weed_detector/src/: weed_detection_node  weed_targeting_node
src/volcaniarm_weed_detector/volcaniarm_weed_detector/: weed_3d_detector_node.py  weed_detection_node.py  weed_targeting_node.py
(+90 files in other folders)
