<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volcaniarm_bringup</name>
  <version>0.0.0</version>
  <description>Bringup package for Volcaniarm robot</description>
  <maintainer email="tamirlevin@gmail.com">tamir</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>volcaniarm_description</depend>
  <depend>volcaniarm_controller</depend>
  <depend>volcaniarm_calibration</depend>
  <depend>gazebo_ros</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
