<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volcaniarm_calibration</name>
  <version>0.0.0</version>
  <description>Hand-eye calibration for Volcaniarm using ArUco markers and easy_handeye2</description>
  <maintainer email="tamirlvn@gmail.com">tamir</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>easy_handeye2</depend>
  <depend>ros2_aruco_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
