<?xml version="1.0"?>
<package format="3">
  <name>volcaniarm_hardware</name>
  <version>0.0.1</version>
  <description>ROS 2 ros2_control hardware interface for Volcaniarm dual stepper motor controller.</description>

  <maintainer email="tamirlvn@gmail.com">Tamir Levin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>std_srvs</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
