<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>volcaniarm_ik_plugin</name>
  <version>0.0.0</version>
  <description>
    MoveIt analytic position-only IK plugin for the Volcaniarm planar five-bar
    linkage, backed by volcaniarm_kinematics.
  </description>
  <maintainer email="tamirlvn@gmail.com">Tamir Levin</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>volcaniarm_kinematics</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
